# game-of-life

./: .gitignore  CMakeLists.txt
shaders/: fragment.frag.glsl  vertex.vert.glsl
src/: main.cpp  vulkan_methods.cpp  vulkan_methods.hpp
